# rust_ws_api_app

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240125154626_init.up.sql
public/: index.html  script.js
src/: app.rs  app_config.rs  database.rs  log.rs  logger.rs  main.rs  route.rs  schema.rs
src/db/: mod.rs  note_model.rs
src/handlers/: mod.rs  notes_handler.rs  rooms_handler.rs  wsocket_handler.rs
src/models/: note.rs
src/routes/: auth.rs  health.rs  mod.rs  notes.rs  rooms.rs
