[package]
name = "api_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"]}
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.33", features = ["serde"] }
config = "0.14.0"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = [
    "cors", 
    "trace", 
    "propagate-header",
    "sensitive-headers",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = { version = "0.15", features = ["derive"] }
